demenchuk/examples/errors/parser/06_bad_for_syntax.riv
# PARSER ERROR: Некорректный синтаксис for
# Ожидаемая ошибка: Invalid for loop syntax at line 4

numbers = [1, 2, 3, 4, 5]
for i from 1 until 10:
    write(i)
